assets/css/main.scss
---
---

@charset "utf-8";

/* Definition/override of global variables before importing original stylesheets */
$link-color: rgb(90, 0, 0);
$masthead-link-color: $link-color;
$body-color: #222;
$inline-code-color: #eee;
$link-color-contrast: white;
$font-kodchasan: "Kodchasan", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;

@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
@import "minimal-mistakes"; // main partials

/*******************/
/*  Custom Styles  */
/*******************/
  
/* Header */
.masthead {
  height: 2em;
}
.masthead__inner-wrap {
  padding: 0;
  height: 2em;
}
.navicon, .navicon:before, .navicon:after {
  background: $link-color-contrast;
}
.greedy-nav__toggle:hover {
  background: $link-color-contrast;
}
.masthead, .greedy-nav {
  background: $link-color;
  font-family: $font-kodchasan;
}
.greedy-nav a, .greedy-nav a:hover {
  color: $link-color-contrast;
}
.greedy-nav .visible-links a:hover {
  color: $link-color-contrast;
}
.greedy-nav .visible-links a:before {
  background: $link-color-contrast;
  height: 2px;
}
.greedy-nav .hidden-links a {
  color: $link-color
}
i.fa-search {
  color: $link-color-contrast;
}
.search__toggle {
  color: $link-color-contrast;
  height: auto;
}

/* Site Title Logo */
.site-title {
  font-family: $font-kodchasan;
  border: 2px solid $link-color-contrast;
  font-size: 1.5em;
  font-weight: bold;
  background: $link-color;
  box-shadow: 0 0 1px 2px $link-color;
  color: $link-color-contrast;
  border-radius: 2px;
  padding: 0.2em 0.5em;
  height: 2em;
  position: absolute;
  top: 0.25em;
  left: 0.25em;
}
.site-title:hover, .site-title:active {
  color: $link-color-contrast;
}

/* Sidebar */
.sidebar>* {
  margin-top: 2em;
}
@media (min-width: 64em) {
  .sidebar {
    width: calc(180px - 1em);
  }
  .sticky>* {
    text-align: -webkit-center;
  }
  .author__urls {
    margin: 0 1.5em;
    text-align: -webkit-left;
  }
}

/* Center items, i.e. in galleries */
.justify-content {
  justify-content: center;
}

/* Blockquotes */
blockquote {
  font-style: normal; // this allows us to set a source in italic using markdown
  border-left: 0.25em solid $link-color;
}
.notice, .notice--primary, .notice--info, .notice--warning, .notice--success, .notice--danger {
  font-size: 0.9em !important; // overriding the 0.75em default for all notices
}

/* Adjusting links */
a.current {
  color: $link-color;
}
h2.archive__item_title a {
  font-size: 1em;
  color: $link-color;
}
.toc .nav__title {
  background: $link-color;
}
.pagination--pager:hover {
  background-color: $link-color;
}
.pagination--pager {
  padding: 0.25em 1em;
}
.page__content+.pagination, .page__meta+.pagination, .comment__date+.pagination, .page__share+.pagination, .page__comments+.pagination {
  margin-top: 1em;
  padding-top: 1em;
}
.pagination li a.current, .pagination li a.current.disabled {
  background-color: $link-color;
}
/* Text font size */
.page__content {
  font-size: 0.9em;
}

/* Inline code */
p>code, a>code, li>code, figcaption>code, td>code {
  background: $inline-code-color;
  font-size: 0.9em;
}

/* Footer */
.page__footer {
  background: $link-color;
  margin-top: 0.5em;
}
.page__footer footer {
  margin-top: 0.25em;
  max-width: 100%;
  padding: 0 1em 0.25em;
}
@media screen and (min-width: 800px) {
  .page__footer {
    height: auto;
  }
  .page__footer-follow {
    float: left;
    padding-top: 0.25em;
  }
  .page__footer-copyright {
    float: right; // .footer::after has 'clear: both;' set
    margin-top: 0.75em;
  }
}

/* Don't increase text size further */
@media (min-width: 80em) {
  html {
      font-size: 20px;
  }  
}

